bugfix:  remove horizontal scrolls on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -112,7 +112,7 @@ body {
 
 body[data-menu-is-open='true'] {
   block-size: 100vh;
-  overflow-y: hidden;
+  overflow: hidden;
 }
 
 button {
